--- a/delf.1
+++ b/delf.1
@@ -32,7 +32,9 @@ the lowest encoded value,
 will be chosen.
 If
 .Ar file
-is absent then
+is absent or
+.Sq -
+then
 .Nm
 reads from the standard input.
 .Pp
