--- a/delim.1
+++ b/delim.1
@@ -28,7 +28,9 @@
 checks that each line has the same number of delimiter characters.
 If
 .Ar file
-is absent then
+is absent or
+.Sq -
+then
 .Nm
 reads from the standard input.
 .Pp
