--- a/freq.1
+++ b/freq.1
@@ -27,7 +27,9 @@
 calculates the character frequency of all characters.
 If
 .Ar file
-is absent then
+is absent or
+.Sq -
+then
 .Nm
 reads from the standard input.
 .Pp
