adding utf8 support

--- a/delim.1
+++ b/delim.1
@@ -71,5 +71,4 @@ was written by
 .An "Logan Ryan McLintock".
 .Sh CAVEATS
 .Nm
-does not support multi-byte character encodings,
-or multi-character delimiters.
+does not support multi-character delimiters.
