--- a/freq.1
+++ b/freq.1
@@ -61,6 +61,7 @@ is released under the ISC licence (OpenBSD style).
 .Ex -std
 .Sh EXAMPLES
 .Dl $ freq file
+.Dl $ LC_CTYPE=C freq file
 .Sh SEE ALSO
 .Xr delim 1
 .Xr delf 1
