--- a/freq.1
+++ b/freq.1
@@ -36,8 +36,10 @@ reads from the standard input.
 Upon success three tab delimited columns are printed
 with one row for each character present.
 The first column is the decimal value of the character,
-the second column is the glyph (which may not be visible),
+the second column is the glyph or a backslash t for a tab
+or a backslash n for a line feed,
 and the final column is the frequency.
+The glyph may not be visible.
 .Pp
 .Nm
 can run in two modes, UTF-8 mode, and single-byte mode.
