--- a/print.tex
+++ b/print.tex
@@ -42,6 +42,14 @@
 \VerbatimInput{./makefile}
 \newpage
 
+\section{utf8.h}
+\VerbatimInput{./utf8.h}
+\newpage
+
+\section{utf8.c}
+\VerbatimInput{./utf8.c}
+\newpage
+
 \section{man delim}
 \includepdf[pages=-]{./delim.pdf}
 
